SonicOrigins/Uncategorized/C++/ObjectRflParam.h

typedef struct
{
    const char* pValue;
    INSERT_PADDING(8);
}
cstring;
typedef struct
{
    cstring effectName;
    cstring effectNodeName;
    bool follow;
}
EffectInfo;
typedef struct
{
    EffectInfo effectInfo;
    uint32_t frames[2];
}
OneShotEffectInfo;
typedef struct
{
    cstring model;
    cstring flyAnim;
    cstring attackAnim;
    cstring skeleton;
    float radius;
    EffectInfo burnerEffectInfos[2];
    OneShotEffectInfo strongBurnerEffectInfos[2];
}
BeetonObjectResourceRflParam;
typedef struct
{
    BeetonObjectResourceRflParam beetonObjectResourceParam;
}
BeetonObjectRflParam;
typedef struct
{
    int32_t dummy;
}
RoundTripObjectRflParam;
typedef struct
{
    cstring model;
    cstring moveAnim;
    cstring waitAnim;
    cstring jumpAnim;
    cstring skeleton;
    float radius;
    EffectInfo effectMoveGrass;
    OneShotEffectInfo effectJumpGrass;
    OneShotEffectInfo effectLandingGrass;
    EffectInfo effectMoveRock;
    OneShotEffectInfo effectJumpRock;
    OneShotEffectInfo effectLandingRock;
    bool isLeaningOnPath;
}
RoundTripObjectResourceRflParam;
typedef struct
{
    RoundTripObjectResourceRflParam roundTripObjectResourceRflParam;
    int32_t dummy;
}
MotoraObjectResourceRflParam;
typedef struct
{
    RoundTripObjectRflParam roundTripObjectRflParam;
    MotoraObjectResourceRflParam motoraObjectResourceParam;
}
MotoraObjectRflParam;
typedef struct
{
    int32_t dummy;
}
WaterObjectRflParam;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
    OneShotEffectInfo effectJump;
    OneShotEffectInfo effectTouchdown;
    OneShotEffectInfo effectWaterDrop;
}
WaterObjectResourceRflParam;
typedef struct
{
    WaterObjectResourceRflParam waterObjectResourceRflParam;
    int32_t dummy;
}
BatabataObjectResourceRflParam;
typedef struct
{
    WaterObjectRflParam waterObjectRflParam;
    BatabataObjectResourceRflParam batabataObjectResourceParam;
}
BatabataObjectRflParam;
typedef struct
{
    WaterObjectResourceRflParam waterObjectResourceRflParam;
    int32_t dummy;
}
RockyObjectResourceRflParam;
typedef struct
{
    WaterObjectRflParam waterObjectRflParam;
    RockyObjectResourceRflParam rockyObjectResourceParam;
}
RockyObjectRflParam;
typedef struct
{
    int32_t dummy;
}
GroundObjectRflParam;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
    OneShotEffectInfo effectJumpGrass;
    OneShotEffectInfo effectLandingGrass;
    OneShotEffectInfo effectJumpRock;
    OneShotEffectInfo effectLandingRock;
}
GroundObjectResourceRflParam;
typedef struct
{
    GroundObjectResourceRflParam groundObjectResourceRflParam;
    int32_t dummy;
}
FlickyObjectResourceRflParam;
typedef struct
{
    GroundObjectRflParam groundObjectRflParam;
    FlickyObjectResourceRflParam flickyObjectResourceParam;
}
FlickyObjectRflParam;
typedef struct
{
    WaterObjectResourceRflParam waterObjectResourceRflParam;
    int32_t dummy;
}
PeckyObjectResourceRflParam;
typedef struct
{
    WaterObjectRflParam waterObjectRflParam;
    PeckyObjectResourceRflParam peckyObjectResourceParam;
}
PeckyObjectRflParam;
typedef struct
{
    GroundObjectResourceRflParam groundObjectResourceRflParam;
    int32_t dummy;
}
RickyObjectResourceRflParam;
typedef struct
{
    GroundObjectRflParam groundObjectRflParam;
    RickyObjectResourceRflParam rickyObjectResourceParam;
}
RickyObjectRflParam;
typedef struct
{
    GroundObjectResourceRflParam groundObjectResourceRflParam;
    int32_t dummy;
}
CuckyObjectResourceRflParam;
typedef struct
{
    GroundObjectRflParam groundObjectRflParam;
    CuckyObjectResourceRflParam cuckyObjectResourceParam;
}
CuckyObjectRflParam;
typedef struct
{
    GroundObjectResourceRflParam groundObjectResourceRflParam;
    int32_t dummy;
}
PickyObjectResourceRflParam;
typedef struct
{
    GroundObjectRflParam groundObjectRflParam;
    PickyObjectResourceRflParam pickyObjectResourceParam;
}
PickyObjectRflParam;
typedef struct
{
    GroundObjectResourceRflParam groundObjectResourceRflParam;
    int32_t dummy;
}
PockyObjectResourceRflParam;
typedef struct
{
    GroundObjectRflParam groundObjectRflParam;
    PockyObjectResourceRflParam pockyObjectResourceParam;
}
PockyObjectRflParam;
typedef struct
{
    int32_t dummy;
}
CommonObjectRflParam;
typedef struct
{
    bool isActive;
    cstring uvAnimNames[2];
}
UVAnimationInfo;
typedef struct
{
    bool isActive;
    cstring visAnimNames;
}
VISAnimationInfo;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
    EffectInfo effectInfos[2];
    OneShotEffectInfo oneShotEffectInfos[2];
    UVAnimationInfo loopUVAnimInfo;
    VISAnimationInfo loopVISAnimInfo;
}
CommonObjectResourceRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
TornadoObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    TornadoObjectResourceRflParam tornadoObjectResourceParam;
}
TornadoObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
EggroboObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    EggroboObjectResourceRflParam eggroboObjectResourceParam;
}
EggroboObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
MogumoguObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    MogumoguObjectResourceRflParam mogumoguObjectResourceParam;
}
MogumoguObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
ValkyneObjectResourceRflParam;