SonicOrigins/Uncategorized/C#/ObjectRflParam.cs

using System.Numerics;
using System.Runtime.InteropServices;

public class ObjectRflParamClass
{
    [StructLayout(LayoutKind.Explicit, Size = 16)]
    public struct CString
    {
        [FieldOffset(0)] public long pValue;

        public string Value
        {
        	get => Marshal.PtrToStringAnsi((IntPtr)pValue);
        	set => pValue = (long)Marshal.StringToHGlobalAnsi(value);
        }
    }

    [StructLayout(LayoutKind.Explicit, Size = 40)]
    public struct EffectInfo
    {
        [FieldOffset(0)]  public CString effectName;
        [FieldOffset(16)] public CString effectNodeName;
        [FieldOffset(32)] public bool follow;
    }

    [StructLayout(LayoutKind.Explicit, Size = 48)]
    public struct OneShotEffectInfo
    {
        [FieldOffset(0)]  public EffectInfo effectInfo;
        [FieldOffset(40)] public uint frames__arr0;
        [FieldOffset(44)] public uint frames__arr1;
    }

    [StructLayout(LayoutKind.Explicit, Size = 248)]
    public struct BeetonObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString flyAnim;
        [FieldOffset(32)]  public CString attackAnim;
        [FieldOffset(48)]  public CString skeleton;
        [FieldOffset(64)]  public float radius;
        [FieldOffset(72)]  public EffectInfo burnerEffectInfos__arr0;
        [FieldOffset(112)] public EffectInfo burnerEffectInfos__arr1;
        [FieldOffset(152)] public OneShotEffectInfo strongBurnerEffectInfos__arr0;
        [FieldOffset(200)] public OneShotEffectInfo strongBurnerEffectInfos__arr1;
    }

    [StructLayout(LayoutKind.Explicit, Size = 248)]
    public struct BeetonObjectRflParam
    {
        [FieldOffset(0)] public BeetonObjectResourceRflParam beetonObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct RoundTripObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 368)]
    public struct RoundTripObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString moveAnim;
        [FieldOffset(32)]  public CString waitAnim;
        [FieldOffset(48)]  public CString jumpAnim;
        [FieldOffset(64)]  public CString skeleton;
        [FieldOffset(80)]  public float radius;
        [FieldOffset(88)]  public EffectInfo effectMoveGrass;
        [FieldOffset(128)] public OneShotEffectInfo effectJumpGrass;
        [FieldOffset(176)] public OneShotEffectInfo effectLandingGrass;
        [FieldOffset(224)] public EffectInfo effectMoveRock;
        [FieldOffset(264)] public OneShotEffectInfo effectJumpRock;
        [FieldOffset(312)] public OneShotEffectInfo effectLandingRock;
        [FieldOffset(360)] public bool isLeaningOnPath;
    }

    [StructLayout(LayoutKind.Explicit, Size = 376)]
    public struct MotoraObjectResourceRflParam
    {
        [FieldOffset(0)]   public RoundTripObjectResourceRflParam roundTripObjectResourceRflParam;
        [FieldOffset(368)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 384)]
    public struct MotoraObjectRflParam
    {
        [FieldOffset(0)] public RoundTripObjectRflParam roundTripObjectRflParam;
        [FieldOffset(8)] public MotoraObjectResourceRflParam motoraObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct WaterObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 200)]
    public struct WaterObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString animation;
        [FieldOffset(32)]  public CString skeleton;
        [FieldOffset(48)]  public float radius;
        [FieldOffset(56)]  public OneShotEffectInfo effectJump;
        [FieldOffset(104)] public OneShotEffectInfo effectTouchdown;
        [FieldOffset(152)] public OneShotEffectInfo effectWaterDrop;
    }

    [StructLayout(LayoutKind.Explicit, Size = 208)]
    public struct BatabataObjectResourceRflParam
    {
        [FieldOffset(0)]   public WaterObjectResourceRflParam waterObjectResourceRflParam;
        [FieldOffset(200)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 216)]
    public struct BatabataObjectRflParam
    {
        [FieldOffset(0)] public WaterObjectRflParam waterObjectRflParam;
        [FieldOffset(8)] public BatabataObjectResourceRflParam batabataObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 208)]
    public struct RockyObjectResourceRflParam
    {
        [FieldOffset(0)]   public WaterObjectResourceRflParam waterObjectResourceRflParam;
        [FieldOffset(200)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 216)]
    public struct RockyObjectRflParam
    {
        [FieldOffset(0)] public WaterObjectRflParam waterObjectRflParam;
        [FieldOffset(8)] public RockyObjectResourceRflParam rockyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct GroundObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 248)]
    public struct GroundObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString animation;
        [FieldOffset(32)]  public CString skeleton;
        [FieldOffset(48)]  public float radius;
        [FieldOffset(56)]  public OneShotEffectInfo effectJumpGrass;
        [FieldOffset(104)] public OneShotEffectInfo effectLandingGrass;
        [FieldOffset(152)] public OneShotEffectInfo effectJumpRock;
        [FieldOffset(200)] public OneShotEffectInfo effectLandingRock;
    }

    [StructLayout(LayoutKind.Explicit, Size = 256)]
    public struct FlickyObjectResourceRflParam
    {
        [FieldOffset(0)]   public GroundObjectResourceRflParam groundObjectResourceRflParam;
        [FieldOffset(248)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 264)]
    public struct FlickyObjectRflParam
    {
        [FieldOffset(0)] public GroundObjectRflParam groundObjectRflParam;
        [FieldOffset(8)] public FlickyObjectResourceRflParam flickyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 208)]
    public struct PeckyObjectResourceRflParam
    {
        [FieldOffset(0)]   public WaterObjectResourceRflParam waterObjectResourceRflParam;
        [FieldOffset(200)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 216)]
    public struct PeckyObjectRflParam
    {
        [FieldOffset(0)] public WaterObjectRflParam waterObjectRflParam;
        [FieldOffset(8)] public PeckyObjectResourceRflParam peckyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 256)]
    public struct RickyObjectResourceRflParam
    {
        [FieldOffset(0)]   public GroundObjectResourceRflParam groundObjectResourceRflParam;
        [FieldOffset(248)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 264)]
    public struct RickyObjectRflParam
    {
        [FieldOffset(0)] public GroundObjectRflParam groundObjectRflParam;
        [FieldOffset(8)] public RickyObjectResourceRflParam rickyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 256)]
    public struct CuckyObjectResourceRflParam
    {
        [FieldOffset(0)]   public GroundObjectResourceRflParam groundObjectResourceRflParam;
        [FieldOffset(248)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 264)]
    public struct CuckyObjectRflParam
    {
        [FieldOffset(0)] public GroundObjectRflParam groundObjectRflParam;
        [FieldOffset(8)] public CuckyObjectResourceRflParam cuckyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 256)]
    public struct PickyObjectResourceRflParam
    {
        [FieldOffset(0)]   public GroundObjectResourceRflParam groundObjectResourceRflParam;
        [FieldOffset(248)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 264)]
    public struct PickyObjectRflParam
    {
        [FieldOffset(0)] public GroundObjectRflParam groundObjectRflParam;
        [FieldOffset(8)] public PickyObjectResourceRflParam pickyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 256)]
    public struct PockyObjectResourceRflParam
    {
        [FieldOffset(0)]   public GroundObjectResourceRflParam groundObjectResourceRflParam;
        [FieldOffset(248)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 264)]
    public struct PockyObjectRflParam
    {
        [FieldOffset(0)] public GroundObjectRflParam groundObjectRflParam;
        [FieldOffset(8)] public PockyObjectResourceRflParam pockyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct CommonObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 40)]
    public struct UVAnimationInfo
    {
        [FieldOffset(0)] public bool isActive;
        [FieldOffset(8)] public CString uvAnimNames__arr0;
        [FieldOffset(263)] public CString uvAnimNames__arr1;
    }

    [StructLayout(LayoutKind.Explicit, Size = 24)]
    public struct VISAnimationInfo
    {
        [FieldOffset(0)] public bool isActive;
        [FieldOffset(8)] public CString visAnimNames;
    }

    [StructLayout(LayoutKind.Explicit, Size = 296)]
    public struct CommonObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString animation;
        [FieldOffset(32)]  public CString skeleton;
        [FieldOffset(48)]  public float radius;
        [FieldOffset(56)]  public EffectInfo effectInfos__arr0;
        [FieldOffset(96)] public EffectInfo effectInfos__arr1;
        [FieldOffset(136)] public OneShotEffectInfo oneShotEffectInfos__arr0;
        [FieldOffset(184)] public OneShotEffectInfo oneShotEffectInfos__arr1;
        [FieldOffset(232)] public UVAnimationInfo loopUVAnimInfo;
        [FieldOffset(272)] public VISAnimationInfo loopVISAnimInfo;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct TornadoObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct TornadoObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public TornadoObjectResourceRflParam tornadoObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct EggroboObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct EggroboObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public EggroboObjectResourceRflParam eggroboObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct MogumoguObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct MogumoguObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public MogumoguObjectResourceRflParam mogumoguObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct ValkyneObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }
